# lox-interpreter-rust

./: Cargo.toml  README.md  breakfast_class.lox  simple_block.lox  simple_closure.lox  test.lox
src/: ast.rs  display.rs  evaluate.rs  main.rs  native_function.rs  parse.rs  scan.rs  token.rs
src/ast/: declarations.rs  expressions.rs  mod.rs  statements.rs
src/display/: declarations.rs  expressions.rs  mod.rs  statements.rs
src/evaluate/: declarations.rs  environment.rs  expressions.rs  mod.rs  object.rs  operations.rs  statements.rs
src/parse/: declarations.rs  expressions.rs  mod.rs  statements.rs
