[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
convert_case = "0.6.0"
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.38"                             # error handling
